# xacro-release

./: .bazelignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.rst  CMakeLists.txt  MODULE.bazel  README.md  debian.store  indigo.ignored  package.xml  patches.conf  pyproject.toml  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: bazel.yml  ci.yaml  format.yaml  pypi.yaml
bazel/: BUILD.bazel  README.md  defs.bzl  requirements_lock.txt
bazel/integration_test/: BUILD.bazel  MODULE.bazel
bazel/integration_test/expected/: conditional_default.xml  conditional_false.xml  my_complex_model.xml  sample1.xml  sample2.xml
bazel/integration_test/inputs/: complex.xml.xacro  conditional.xml.xacro
bazel/integration_test/inputs/deeply/nested/: dependency.xml.xacro
cmake/: xacro-extras.cmake
debian/: changelog  control  copyright  gbp.conf  rules
rpm/: ros-galactic-xacro.spec  ros-humble-xacro.spec  ros-indigo-xacro.spec  ros-jade-xacro.spec  ros-jazzy-xacro.spec  ros-kilted-xacro.spec  ros-kinetic-xacro.spec  ros-lunar-xacro.spec  ros-melodic-xacro.spec  ros-rolling-xacro.spec  template.spec
test/: test_xacro.py
test/test-xacro-cmake/: CMakeLists.txt
xacro/: __init__.py  cli.py  substitution_args.py  xmlutils.py
